# baetyl-gateway-sdk

./: .gitignore  README.md  README_zh.md
demo/: README.md
demo/csharp/custom-csharp/: .gitignore  custom-csharp.sln
demo/csharp/custom-csharp/custom-csharp/: Program.cs  custom-csharp.csproj
demo/csharp/custom-csharp/custom-csharp/Collection/: Custom.cs  Device.cs  Driver.cs  Simualtor.cs  Worker.cs
demo/csharp/custom-csharp/custom-csharp/Models/: Config.cs  Point.cs
demo/cxx/custom-cxx/: .gitignore  CMakeLists.txt  README.md
demo/cxx/custom-cxx/src/: CMakeLists.txt
demo/cxx/custom-cxx/src/driver/: CMakeLists.txt  custom.cpp  custom.h  device.cpp  device.h  driver.cpp  driver.h  simulator.cpp  simulator.h  worker.cpp  worker.h
demo/cxx/custom-cxx/src/models/: CMakeLists.txt  deviceconfig.cpp  deviceconfig.h  driverconfig.cpp  driverconfig.h  job.cpp  job.h  point.cpp  point.h  property.cpp  property.h
demo/cxx/custom-cxx/src/utils/: CMakeLists.txt  l.cpp  l.h
demo/golang/bacnet/: bacnet.go  config.go  constants.go  driver.go  go.mod  go.sum  slave.go  worker.go
demo/golang/bacnet/cmd/bacnet/: Makefile  main.go  program.yml
demo/golang/custom-golang/: Makefile  README.md  common.go  config.go  custom.go  device.go  driver.go  go.mod  go.sum  simulator.go  worker.go
demo/golang/custom-golang/cmd/custom/: Makefile  main.go
demo/golang/httpin/: README.md  api.go  config.go  driver.go  engine.go  error.go  go.mod  go.sum  server.go  wrapper.go
demo/golang/httpin/cmd/: Makefile  main.go
demo/golang/iec104/: config.go  constants.go  driver.go  go.mod  go.sum  handler.go  iec104.go  slave.go  worker.go
demo/golang/iec104/cmd/iec104/: Makefile  main.go  program.yml
demo/golang/modbus/: client.go  config.go  constants.go  driver.go  go.mod  go.sum  map.go  modbus.go  slave.go  worker.go
demo/golang/modbus/cmd/modbus/: Makefile  main.go  program.yml
demo/golang/node-red/: Makefile  README.md  api.go  config.go  driver.go  engine.go  error.go  flows.json  go.mod  go.sum  program.yml  server.go
demo/golang/node-red/cmd/: main.go
demo/golang/opcua/: config.go  constants.go  device.go  driver.go  go.mod  go.sum  opcua.go  worker.go
demo/golang/opcua/cmd/opcua/: Makefile  main.go  program.yml
demo/java/custom-java/: .gitignore  README.md  build.gradle  settings.gradle
demo/java/custom-java/src/main/java/com/baidu/bce/: Main.java
demo/java/custom-java/src/main/java/com/baidu/bce/driver/: Custom.java  Device.java  Driver.java  Simulator.java  Worker.java
demo/java/custom-java/src/main/java/com/baidu/bce/models/: DeviceConfig.java  DriverConfig.java  Job.java  Point.java  Property.java
demo/python/bacnet/: main.py
demo/python/bacnet/driver/: bacnet_class.py  config_class.py  driver_class.py  slave_class.py  worker_class.py
demo/python/bacnet/driver/utils/: utils.py  worke_thread.py
sdk/: README.md
sdk/csharp/: .gitignore
sdk/csharp/driversdk/: driversdk.sln
sdk/csharp/driversdk/DriverSDK/: driversdk.csproj
sdk/csharp/driversdk/DriverSDK.Tests/: DriverSDK.Tests.csproj
sdk/csharp/driversdk/DriverSDK.Tests/DmContext/: ContextTests.cs
sdk/csharp/driversdk/DriverSDK.Tests/TestData/: access_template.yml
sdk/csharp/driversdk/DriverSDK.Tests/Utils/: ParseValueTests.cs
sdk/csharp/driversdk/DriverSDK/DmContext/: Context.cs
sdk/csharp/driversdk/DriverSDK/DmContext/Models/: AccessTemplate.cs  Device.cs  Message.cs
sdk/csharp/driversdk/DriverSDK/Plugin/: GrpcDriver.cs  GrpcHealth.cs  GrpcReport.cs  IDriver.cs  IReport.cs  Serve.cs
sdk/csharp/driversdk/DriverSDK/Protos/: health.proto
sdk/csharp/driversdk/DriverSDK/Utils/: L.cs  ParseValue.cs
sdk/cxx/driversdk/: .gitignore  CMakeLists.txt  README.md
sdk/cxx/driversdk/proto/: driver-proto.cmake
sdk/cxx/driversdk/src/context/: CMakeLists.txt  context.cpp  context.h  yamlparser.cpp  yamlparser.h
sdk/cxx/driversdk/src/models/: CMakeLists.txt  accessconfig.cpp  accessconfig.h  accesstemplate.cpp  accesstemplate.h  arraytype.cpp  arraytype.h  deviceinfo.cpp  deviceinfo.h  deviceproperty.cpp  deviceproperty.h  enumtype.cpp  enumtype.h  enumvalue.cpp  enumvalue.h  event.cpp  event.h  message.cpp  message.h  modelmapping.cpp  modelmapping.h  objecttype.cpp  objecttype.h  propertyvisitor.cpp  propertyvisitor.h  subdeviceyaml.cpp  subdeviceyaml.h
sdk/cxx/driversdk/src/plugin/: CMakeLists.txt  grpcdriver.cpp  grpcdriver.h  grpcreport.cpp  grpcreport.h  idriver.h  ireport.h  serve.cpp  serve.h
sdk/cxx/driversdk/src/utils/: CMakeLists.txt  path.cpp  path.h
sdk/example/: README.md  access_template.yml  models.yml
sdk/golang/: README.md  client.go  config.go  go.mod  go.sum  grpc_client.go  grpc_report.go  grpc_server.go  interface.go  serve.go
sdk/golang/plugin/: README.md  client.go  config.go  go.mod  grpc_client.go  grpc_report.go  grpc_server.go  interface.go  serve.go
sdk/golang/plugin/proto/: driver.pb.go
sdk/golang/proto/: driver.pb.go
sdk/java/driversdk/: .gitignore  README.md  build.gradle  settings.gradle
sdk/proto/: driver.proto
sdk/python/: README.md  setup.py
sdk/python/gateway_sdk/: __init__.py  grpc_client.py  grpc_dirver.py  interface_driver.py  interface_report.py  server.py
sdk/python/gateway_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdk/python/gateway_sdk/context/: __init__.py  context.py
sdk/python/gateway_sdk/context/mode/: __init__.py  mode.py
sdk/python/gateway_sdk/context/mode/protocol/: bacnet.py  custom.py  iec104.py  modbus.py  opcda.py  opcua.py
sdk/python/gateway_sdk/proto/: __init__.py  driver_pb2.py  driver_pb2.pyi  driver_pb2_grpc.py
test/: MQTT_CLIENT.md  README.md
test/driver/custom-csharp/: access_template.yml  models.yml  program.yml  sub_devices.yml
test/driver/custom-cxx/: access_template.yml  program.yml  sub_devices.yml
test/driver/custom-golang/: program.yml  sub_devices.yml
test/driver/custom-java/: program.yml  sub_devices.yml
test/driver/http-in/: program.yml  sub_devices.yml
test/driver/node-red/: access_template.yml  models.yml  sub_devices.yml
(+29 files in other folders)
